Fixed TopBar position on mobile

--- a/src/styles/topMenu.scss
+++ b/src/styles/topMenu.scss
@@ -22,7 +22,7 @@ $bar-height:70px;
             transform:translate(0,-50%);
             padding-left:20px;
             padding-right:20px;
-            width:calc(100%);
+            width:calc(100% - 40px);
             display:flex;
             flex-wrap:nowrap;
             flex-direction: row;
